# rust-game-1

./: Cargo.toml  config.json
splines/: .Cargo.toml.swp
splines/src/: .lib.rs.swp  lib.rs
src/: main.rs
