[package]
name = "rust-game-1"
version = "0.1.0"
authors = ["nsmryan <nsmryan@gmail.com>"]

[dependencies]
ggez="0.4.4"
rand="0.5.5"
voronoi="0.1.4"
warmy="0.9.0"
serde="1.0"
serde_derive="1.0"
serde_json="1.0.30"
spade="1.5"
nalgebra="0.14"
ncollide2d = "0.17"
splines= { path = "splines", features = ["std", "serialization", "impl-nalgebra"] }
ezing="0.2"
